--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "config": "3.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "moment": "^2.29.4",
+    "mongoose": "^7.4.3",
     "next": "13.4.16",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
