--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://hrfolio.vercel.app/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
