--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "config": "3.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "express-fileupload": "^1.4.0",
     "moment": "^2.29.4",
     "mongoose": "^7.4.3",
     "next": "13.4.16",
