--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.40.0",
     "config": "3.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
